# fun-language-exercise

./: README.md  main.py  pyproject.toml
src/fun_language_package/: evaluation_visitor.py  fun_utils.py  fun_visitor.py  function_argument_is_function_detector_visitor.py  function_return_function_detector_visitor.py  int_logger_visitor.py  unbound_variable_detector_visitor.py
tests/: test_argument_is_function_detector.py  test_evaluation_visitor.py  test_fun_utils.py  test_function_return_function_detector.py  test_int_visitor.py  test_program_build_and_evaluation.py  test_unbound_variable_visitor.py  tests.py
